--- a/public/css/default.css
+++ b/public/css/default.css
@@ -329,7 +329,7 @@ h2.layout {
 }
 
 #logo img {
-	margin: 26px 20px 0 0;
+	margin: 0 0; 
 }
 
 #logo-footer {
@@ -360,7 +360,7 @@ h2.layout {
 	background: #333 url("/images/top-bg.gif") repeat-x 0 0;
 	font-size: 10px;
 	font-weight: bold;
-	overflow: hidden;
+	overflow: hidden; 
 }
 
 #top a:link,#top a:visited {
