--- a/prototipo-1/client/client.css
+++ b/prototipo-1/client/client.css
@@ -26,6 +26,7 @@ html{
 */
 .coin-slider { overflow: hidden; zoom: 1; position: relative; }
 .coin-slider a{ text-decoration: none; outline: none; border: none; }
+.coin-slider IMG { border: 10px solid white;}
 
 .cs-buttons { font-size: 0px; padding: 10px; float: left; }
 .cs-buttons a { margin-left: 5px; height: 10px; width: 10px; float: left; border: 1px solid #B8C4CF; color: #B8C4CF; text-indent: -1000px; }
