añadido el paquete password y el login

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -7,6 +7,9 @@ body {
 	color: #000;
 }
 
+.login-buttons-dropdown-align-right{
+		float:right;
+}
 /**** Link Styles ****/
 a:link,a:visited {
 	color: #2FA694;
