--- a/prototipo-2/client/client.css
+++ b/prototipo-2/client/client.css
@@ -15,18 +15,22 @@ html{
 	color: white;
 }
 
-/*#imagen{
 
-        width: 40%;
-        height: 40%; 
+#coin-slider{
 
-
+        width: 800;
+        height:400;
+        margin: auto;
+        border: 8px solid #848484; 
+        box-shadow: 5px 5px 5px #1C1C1C;
 
 }
-*/
-.coin-slider { overflow: hidden; zoom: 1; position: relative; }
+
+
+
+
+.coin-slider { overflow: hidden; zoom: 1; position: relative;   }
 .coin-slider a{ text-decoration: none; outline: none; border: none; }
-.coin-slider IMG { border: 10px solid white;}
 
 .cs-buttons { font-size: 0px; padding: 10px; float: left; }
 .cs-buttons a { margin-left: 5px; height: 10px; width: 10px; float: left; border: 1px solid #B8C4CF; color: #B8C4CF; text-indent: -1000px; }
