Creacion de plantillas, reestructurado del proyecto

--- a/client/templates/chat-t.html
+++ b/client/templates/chat-t.html
@@ -1,5 +1,11 @@
 <!-- BEGIN: Template -->
 
+<template name="chat">
+ 	{{> gblmsgs}}
+  	{{> wrmsg}}
+</template>
+
+
 <!-- Begin: Templates Chat global -->
 <template name="gblmsgs">
 	<h1>Chat global</h1>
