--- a/client/templates/main-menu-t.html
+++ b/client/templates/main-menu-t.html
@@ -1,12 +1,29 @@
 
+<template name="menu">
+	<div id="main-content">
+	
+		<!-- BEGIN: Header -->
+		<div id="header">
+	
+			<a href="" id="logo"> <img src="images/logo.png"
+				alt="ISI Pakistan" /></a>
+	
+		{{> main_menu}}
+	
+			<div id="header-graphic"></div>
+	
+		</div>
+		<!-- END: Header -->
+	
+	</div>
+</template>
 
 <template name="main_menu">
-	<ul class="main-menu">
-		 {{#each main_menu}}
-		 <li class="{{current}}" ><a href="">{{name}}</a></li>
-		 {{/each}}
-	</ul>
+<ul class="main-menu">
+	{{#each main_menu}}
+	<li class="{{current}}"><a href="">{{name}}</a></li> {{/each}}
+</ul>
 </template>
- 
+
 
 
