--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -1,10 +1,9 @@
-<template name="torneos">
 
-{{#if show}}
-	<div class="torneo"> 
-			<h3 class="post-title">Creación de torneos</h3> 
-			<img src="images/logo.png"
-				class="post-image" alt="sample image" /> 
-	</div>
-{{/if}}
+
+<template name="torneos">
+	{{#if show}}
+		<h1>Torneos</h1>
+	{{/if}}
 </template> 
+
+
