--- a/client/templates/user-menu-t.html
+++ b/client/templates/user-menu-t.html
@@ -1,8 +1,9 @@
 
 <template name="user_menu">
-		
-		 {{#each user_menu}}
-		 <a href="#">{{name}}</a>
-		 {{/each}}
+		 
+  <ul>
+	{{#each user_menu}}
+	<li class="{{current}}"><a href="">{{name}}</a></li> {{/each}}
+  </ul>
 
 </template>
