--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -1,5 +1,41 @@
-<template name="juegos">
-	{{#if show}}
-		<h1>Juegos</h1>
-	{{/if}}
-</template> 
+<template name="juegos"> {{#if show}}
+<h1>Juegos</h1>
+
+
+
+
+
+
+
+<div class="full-page">
+
+	<h3>Portfolio</h3>
+
+	<p>You can configure your portfolio page several different ways.
+		Below are two examples. The first demonstrates a full page layout
+		without a menu. Further down you can see an example which includes a
+		sub-navigation.</p>
+
+	<h4>Full page layout</h4>
+
+	<div class="gallery">
+		<div class="gallery-item">
+			 <img  src="images/content/demo-only/portfolio/sample3-thumb.jpg"
+				class="gallery-image" alt="sample image" />
+			</a>
+			<div class="gallery-description">
+				<h5>Lorem Ipsum Dolor</h5>
+				<p>Sed molestie, neque sed felis nisl mi sed odio. Aliquam
+					mollis metus vel dolor amet nisi vehicula accumsan luctus a
+					pretium.</p>
+				<a href="#">More Information...</a>
+			</div>
+		</div>
+
+
+
+
+
+
+		{{/if}}
+</template>
