--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -33,7 +33,11 @@
 		</div>
 
 
-
+{name: 'Alien Invasion',
+logo_src: '/images/games_logo/alieninvasion',
+logo_alt: 'Juega es este juego',
+title_desc: 'Titulo para la descripcion del juego'
+      },
 
 
 
