--- a/client/templates/dashboard-t.html
+++ b/client/templates/dashboard-t.html
@@ -1,5 +1,14 @@
 <template name="dashboard">
 	{{#if show}}
 		<h1>Dashboard</h1>
+
+
+	<!-- BEGIN: Chat Global -->
+	<div id="gbl-chat">
+		{{> chat}}
+	</div>
+	<!-- END: Chat Global -->
+
+		
 	{{/if}}
 </template> 
