--- a/client/templates/chat-t.html
+++ b/client/templates/chat-t.html
@@ -1,14 +1,16 @@
 <!-- BEGIN: Template -->
 
 <template name="chat">
- 	{{> gblmsgs}}
+	<h1>Chat global</h1>
   	{{> wrmsg}}
+ 	{{> gblmsgs}}
+
 </template>
 
 
 <!-- Begin: Templates Chat global -->
 <template name="gblmsgs">
-	<h1>Chat global</h1>
+
 	<div id="msgs">
 		{{#each msgs}}
 		<p class="users">{{user}}:</p>
@@ -19,8 +21,9 @@
 
 <template name="wrmsg">
 	<div id="wr_msg">
-		Mensaje: <input type="text" id="msg"> <input type="button"
-			id="sendmsg" value="Enviar">
+
+		Mensaje: <input type="text" id="msg"> 
+		<input type="button" id="sendmsg" value="Enviar">
 	</div>
 </template>
 <!-- End: Templates Chat -->
