--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -26,39 +26,32 @@
 		</div>
 	</div>
 </div>
-
-{{/if}}
-
+{{/if}} </template>
 
 
 
+<template name="gamecontainer"> 
+<div id="gamecontainer">
+	<div id="page">
+		<div id="page-top-gap"></div>
+		<div id="page-content">
 
-</template>
+			<div id="GameAlienInvasion" class="game">
+				<h1>AlienInvasion</h1>
+				<canvas id='gamealien' width='320' height='480'></canvas>
+			</div>
 
+			<div id="GameCarcassone" class="game">
+				<h1>GameCarcassone</h1>
+				<canvas id='GameCarcassoneCanvas' width='320' height='480'></canvas>
+			</div>
 
-
-<template name="gamecontainer">
-{{#if show}}
-<div id="page">
-	<div id="page-top-gap"></div>
-	<div id="page-content">
-
-		<div id="GameAlienInvasion" class="game">
-			<h1>AlienInvasion</h1>
-			<canvas id='gamealien' width='320' height='480'></canvas>
+			<div id="GameFrootWars" class="game">
+				<h1>GameFrootWars</h1>
+				<canvas id='GameFrootWarsCanvas' width='320' height='480'></canvas>
+			</div>
 		</div>
 
-		<div id="GameCarcassone" class="game">
-			<h1>GameCarcassone</h1>
-			<canvas id='GameCarcassoneCanvas' width='320' height='480'></canvas>
-		</div>
-
-		<div id="GameFrootWars" class="game">
-			<h1>GameFrootWars</h1>
-			<canvas id='GameFrootWarsCanvas' width='320' height='480'></canvas>
-		</div>
 	</div>
 </div>
-</div>
-{{/if}}  
 </template>
