--- a/prototipo-2/client/client.css
+++ b/prototipo-2/client/client.css
@@ -17,7 +17,7 @@ html{
 }
 
 #div-login-button:hover {
-    color: #848484;
+    color: #0080FF;
 }
 
 #coin-slider{
@@ -32,7 +32,7 @@ html{
 }
 
 #coin-slider:hover {
-    border-color: #000000;
+    border-color: #0080FF;
 }
 
 
