corregido el refresco de la pagina y efecto titulo incluido

--- a/prototipo-2/client/client.css
+++ b/prototipo-2/client/client.css
@@ -5,6 +5,10 @@ html{
     color: white;
 }
 
+#titulo{
+	text-shadow:2px 2px #2E9AFE;
+}
+
 
 #div-login-button{
 	float: right;
@@ -17,7 +21,7 @@ html{
 }
 
 #div-login-button:hover {
-    color: #0080FF;
+    color: #2E9AFE;
 }
 
 #coin-slider{
@@ -32,7 +36,7 @@ html{
 }
 
 #coin-slider:hover {
-    border-color: #0080FF;
+    border-color: #2E9AFE;
 }
 
 
