--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -1,9 +1,70 @@
-
-
 <template name="torneos">
 	{{#if show}}
-		<h1>Torneos</h1>
+		<h3 class="post-title">Creación de torneos</h3> 
+		<input type="button" id="crear_torneo" value="Crear Torneos"> 
+		{{#if showCreateDialog}}
+	    	{{> createDialog}}
+	    {{else}} <!--para que salga debajo sino sale a un lado el boton crear_torneo-->
+    		<p></p>
+  		{{/if}}
+		<div class="two-thirds">
+			<div class="blog">
+				<div class="post-summary">
+					<h3 class="post-title">{{nombre_torneo}}</h3>
+					<div class="post-details">
+						<div class="post-date">
+							<span class="date">Fecha inicio: {{date_start}}</span>
+							<span class="date">Fecha final: {{date_finish}}</span>
+						</div>
+						Posted by <a href="#">{{user_create}}</a> in <a href="#">{{game}}</a> |<a href="#"></a>
+					</div>
+					<img src="/images/content/demo-only/logo-browsers.jpg" {{banner}} class="post-image" alt="sample image" width="606" height="115" />
+					<div class="post-description">
+						<p>{{description}}</p>
+						<a href="#">Read More...</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="one-third">
+			<h3>Juegos</h3>
+			<ul class="sub-navigation">
+				<li><a href="#">Clarcassone</a></li> 
+				<li><a href="#">AlienInvasion</a></li>
+				<li><a href="#">FrootWars</a></li>
+			</ul>
+			<br/>		
+		</div>
+		<!-- END: Page content -->			
+		<div class="clear"><!-- add to the end of each page to help extend container (or, optional: after a group of layout elements) --></div>
+		</div>
 	{{/if}}
 </template> 
 
-
+<template name="createDialog">
+	<div class="mask"> </div>
+  		<div class="modal">
+    		<div class="modal-header">
+      			<button type="button" class="close cancel">&times;</button>
+      			<h3>Add Championship</h3>
+    		</div>	
+    		<div class="modal-body">
+      			{{#if error}}
+        			<div class="alert alert-error">{{error}}</div>
+      			{{/if}}
+      			<label>Title</label>
+      			<input type="text" class="title span5">
+      			<label>Date Start</label>
+      			<input type="text" class="date_start span5">
+      			<label>Date Finish</label>
+      			<input type="text" class="date_finish span5">
+      			<label>Description</label>
+      			<textarea class="description span5"></textarea>    
+    		</div>
+    		<div class="modal-footer">
+      			<a href="#" class="btn cancel">Cancel</a>
+      			<a href="#" class="btn btn-primary save">Add Championship</a>
+    		</div>
+  		</div>
+  	</div>
+</template>
