--- a/prototipo-3/client/client.css
+++ b/prototipo-3/client/client.css
@@ -10,6 +10,8 @@ html{
 }
 
 
+
+
 #div-login-button{
 	float: right;
 	position: fixed;
@@ -26,8 +28,8 @@ html{
 
 #coin-slider{
 
-    width: 800;
-    height:400;
+    width: 800px;
+    height:400px;
     margin: auto;
     border: 8px solid #848484; 
     box-shadow: 10px 10px 5px #1C1C1C;
@@ -39,6 +41,18 @@ html{
     border-color: #2E9AFE;
 }
 
+#friends {
+	width: 125px;
+	height:	50px;
+	font-weight:bold;
+	text-align: center;
+	line-height: 50px;
+	border-radius:7px;
+	
+	background-color: #2E9AFE;
+	border: 4px solid #2E9AFE;
+	position: absolute;
+}
 
 
 .coin-slider { overflow: hidden; zoom: 1; position: relative;   }
