Add dummy games

--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -24,22 +24,12 @@
 
 
 <template name="gamecontainer"> 
-<div id="gamecontainer">
+Hola
 
-			<div id="GameAlienInvasion" class="game">
-				<h1>AlienInvasion</h1>
-				<canvas id='gamealien' width='320' height='480'></canvas>
-			</div>
+<div id="gamecontainer"> 
 
-			<div id="GameCarcassone" class="game">
-				<h1>GameCarcassone</h1>
-				<canvas id='GameCarcassoneCanvas' width='320' height='480'></canvas>
-			</div>
+<canvas id='dummydiv' width='320' height='480'></canvas>
 
-			<div id="GameFrootWars" class="game">
-				<h1>GameFrootWars</h1>
-				<canvas id='GameFrootWarsCanvas' width='320' height='480'></canvas>
-			</div>
-		</div>
+</div>
 
 </template>
