--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -2,7 +2,7 @@
 
 		<div class="full-page">
 			<h5>Juegos disponibles en la plataforma</h5>
-
+			<h2>Solo funcionan los Dummys</h2>
 			<div class="gallery">
 				{{#each juegos}}
 
@@ -18,6 +18,7 @@
 				{{/each}}
 			</div>
 		</div>
+
 
 {{/if}} </template>
 
