--- a/prototipo-3/client/client.css
+++ b/prototipo-3/client/client.css
@@ -42,7 +42,7 @@ html{
 }
 
 #friends {
-	width: 125px;
+	width: 175px;
 	height:	50px;
 	font-weight:bold;
 	text-align: center;
@@ -52,6 +52,18 @@ html{
 	background-color: #2E9AFE;
 	border: 4px solid #2E9AFE;
 	position: absolute;
+}
+
+
+
+#accordion{	
+	position: absolute;
+}
+
+#accordion .ui-accordion-content{
+	width: 100px;
+	height: 425px;
+	
 }
 
 
