--- a/client/templates/dashboard-t.html
+++ b/client/templates/dashboard-t.html
@@ -4,9 +4,9 @@
 
 
 	<!-- BEGIN: Chat Global -->
-	<div id="gbl-chat">
+	<!-- <div id="gbl-chat">
 		{{> chat}}
-	</div>
+	</div> -->
 	<!-- END: Chat Global -->
 
 		
