--- a/client/templates/chat-t.html
+++ b/client/templates/chat-t.html
@@ -1,22 +1,51 @@
 <!-- BEGIN: Template -->
 
 <template name="chat">
+    <script type="text/javascript">
+      $(document).ready(function(){
+          var box = null;
+          $("input[type='button']").click(function(event, ui) {
+              if(box) {
+                  box.chatbox("option", "boxManager").toggleBox();
+              }
+               else {
+                  $("#chat_div").chatbox({
+                    id:"pepe", 
+                    user:{key : "v555"},
+                    title : "test chat",
+                    messageSent : function(id, user, msg) {
+                      $("#chat_div").chatbox("option", "boxManager").addMsg(id, msg);
+                    }
+                  });
+               }
+           });
+      });
+    </script>
+
+
+    <input type="button" name="toggle" value="toggle" />
+
+    <div id="log">
+    </div>
+
+    <div id="chat_div">
+	</div>
+
+</template>
 	
   	<!-- {{> wrmsg}}
  	{{> gblmsgs}} -->
- 	{{#if ver}}
+<!--  	{{#if ver}}
 		<h1>Chat global</h1>
 
 
-	<!-- BEGIN: Chat Global -->
-	<!-- <div id="gbl-chat">
+	BEGIN: Chat Global -->
+<!-- 	<div id="gbl-chat">
 		{{> chat}}
 	</div> -->
 	<!-- END: Chat Global -->
 
 		
-	{{/if}}
-</template> 
 
 
 <!-- <template name="gchat">
