Creada tabla para los ranking

--- a/client/templates/ranking-t.html
+++ b/client/templates/ranking-t.html
@@ -1,12 +1,27 @@
 <template name="ranking">
 	{{#if show}}
-		<h1>Ranking</h1>
-		<ul>
-		<li type="circle"> | Game ID | USER ID | SCORE</li>
-		{{#each scores}}
-		
-			<li type="circle"> | {{gameId}} | {{userId}} | {{score}}</li>
-		</ul>
+		<h1>Ranking</h1> 
+		<div id = "ranking_container">
+			<table>
+				<thead>
+					<tr>
+						<th>GAME</th>
+						<th>USER</th>
+						<th>SCORE</th> 
+					</tr>
+				</thead> 
+			</table>  
+			{{#each scores}}
+			<table>
+				<tbody>
+					<tr>
+						<td>{{gameId}}</td>
+						<td>{{userId}}</td>
+						<td>{{score}}</td> 
+					</tr>
+				</tbody>
+			</table>  
+		</div>
 		{{/each}}
 		
 	{{/if}}
