--- a/client/templates/chat-t.html
+++ b/client/templates/chat-t.html
@@ -1,74 +1,7 @@
-<!-- BEGIN: Template -->
 
-<template name="chat">
-    <script type="text/javascript">
-      $(document).ready(function(){
-          var box = null;
-          $("input[type='button']").click(function(event, ui) {
-              if(box) {
-                  box.chatbox("option", "boxManager").toggleBox();
-              }
-               else {
-                  $("#chat_div").chatbox({
-                    id:"pepe", 
-                    user:{key : "v555"},
-                    title : "test chat",
-                    messageSent : function(id, user, msg) {
-                      $("#chat_div").chatbox("option", "boxManager").addMsg(id, msg);
-                    }
-                  });
-               }
-           });
-      });
-    </script>
+<template name="gchat">
 
-
-    <input type="button" name="toggle" value="toggle" />
-
-    <div id="log">
-    </div>
-
-    <div id="chat_div">
+    <div id="gblchat">
 	</div>
 
 </template>
-	
-  	<!-- {{> wrmsg}}
- 	{{> gblmsgs}} -->
-<!--  	{{#if ver}}
-		<h1>Chat global</h1>
-
-
-	BEGIN: Chat Global -->
-<!-- 	<div id="gbl-chat">
-		{{> chat}}
-	</div> -->
-	<!-- END: Chat Global -->
-
-		
-
-
-<!-- <template name="gchat">
-	<div id="gblchat">
-	</div>
-</template> -->
-
-<!-- Begin: Templates Chat global -->                                               
-<!-- <template name="gblmsgs">
-
-	<div id="msgs">
-		{{#each msgs}}
-		<p class="users">{{user}}:</p>
-		<p class="msg">{{msg}}</p>
-		<br> {{/each}}
-	</div>
-</template>
-
-<template name="wrmsg">
-	<div id="wr_msg">
-
-		Mensaje: <input type="text" id="msg"> 
-		<input type="button" id="sendmsg" value="Enviar">
-	</div>
-</template> -->
-<!-- End: Templates Chat -->
