Modificados logos y más estilo de la página

--- a/client/templates/main-menu-t.html
+++ b/client/templates/main-menu-t.html
@@ -2,8 +2,7 @@
 <template name="menu">
 		<!-- BEGIN: Header -->
 		<div id="header">
-			<a href="" id="logo"> <img src="images/logo.png"
-				alt="ISI Pakistan" /></a>
+			<a href="" id="logo"> <img src="images/logo.png" alt="ISI Pakistan" /></a>
 	
 		{{> main_menu}}
 	
