--- a/public/css/default.css
+++ b/public/css/default.css
@@ -357,11 +357,11 @@ h2.layout {
 
 /* logo */
 #logo {
-	float: left;
+	float: left; 
 }
 
 #logo img {
-	margin: 2% 0; 
+	margin: 2% 0;  
 }
 
 #logo-footer {
@@ -421,7 +421,7 @@ h2.layout {
 
 /* main page structure  */
 #main {
-	background: #fff url("/images/bg/bg-mirage.jpg") no-repeat 50% 0;
+	background: #fff url("/images/bg/bg-purple.jpg") no-repeat 50% 0;
 	min-height: 650px;
 }
 
@@ -781,7 +781,7 @@ td, th {
 }
 
 #ranking_container {
-	margin: 5% 1%;
+	margin: 5% 2%;
 }
 
 .sub-navigation, .game_filter {
