Arreglado filtrado por juegos en la sección torneos mediante una variable de sesión que contenga cada juego y así devolver sólo la colección correspondiente

--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -1,8 +1,8 @@
 <template name="juegos"> {{#if show}}
 
 		<div class="full-page">
-			<h5>Juegos disponibles en la plataforma</h5>
-			<h2>Solo funcionan los Dummys</h2>
+			<h5 id = "hidden">Juegos disponibles en la plataforma</h5>
+			<h2>¡Nuestros juegos!</h2>
 			<div class="gallery">
 				{{#each juegos}}
 
