--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -32,10 +32,10 @@
 				</div>
 			</div>   
 			<div class="one-third">
-				<h3>Juegos</h3>
+				<h3>Juegos</h3> 
 				<ul class="sub-navigation">
 					{{#each juegos}}
-						<li class="{{name}}"><a href="#">{{name}}</a></li>
+						<li class = "sortBy"><a href="#" class="{{name}}">{{name}}</a></li>
 					{{/each}}
 				</ul>         
 			</div>                     
