Arreglado el filtrado de torneos por juegos configurando una variable de sesión conteniendo el nombre de cada juego y así devolver la colección correspondiente; mostrar todos los torneos también; cambiados estilos de los botones

--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -35,9 +35,10 @@
 				<h3>Juegos</h3>
 				<ul class="sub-navigation">
 					{{#each juegos}}
-						<li class="{{name}}"><a href="#">{{name}}</a></li>
+						<li class = "sortBy"><a href="#" class="{{name}}">{{name}}</a></li>
 					{{/each}}
 				</ul>         
+				<input type="button" id="mostrar_torneos" value="Mostrar todos"> 
 			</div>                     
 			
 	{{/if}}
