Añadidos cambios que no se guardaron anteriormente

--- a/client/templates/torneos-t.html
+++ b/client/templates/torneos-t.html
@@ -38,6 +38,7 @@
 						<li class = "sortBy"><a href="#" class="{{name}}">{{name}}</a></li>
 					{{/each}}
 				</ul>         
+				<input type="button" id="mostrar_torneos" value="Mostrar todos"> 
 			</div>                     
 			
 	{{/if}}
