--- a/prototipo-3/style/client.css
+++ b/prototipo-3/style/client.css
@@ -1,22 +1,22 @@
 html{
-        margin: auto;
-        font-family: verdana, sans-serif;
+    margin: auto;
+    font-family: verdana, sans-serif;
     background-color: #2E2E2E;
     color: white;
 }
 
 #titulo{
-        text-shadow: 0.1em 0.1em 0.1em #2E9AFE, 0.3em 0.2em 0.5em black;
+	text-shadow: 0.1em 0.1em 0.1em #2E9AFE, 0.3em 0.2em 0.5em black;
 }
 
 
 
 
 #div-login-button{
-        float: right;
-        position: fixed;
-        right: 10%;
-        font-size:120%;
+    float: right;
+    position: fixed;
+    right: 10%;
+    font-size:120%;
     color: white;
     transition: color 1s;
 
@@ -42,28 +42,39 @@ html{
 }
 
 #friends {
-        width: 175px;
-        height:        50px;
-        font-weight:bold;
-        text-align: center;
-        line-height: 50px;
-        border-radius:7px;
-        
-        background-color: #2E9AFE;
-        border: 4px solid #2E9AFE;
-        position: absolute;
+	width: 175px;
+	height:	50px;
+	font-weight:bold;
+	text-align: center;
+	line-height: 50px;
+	border-radius:7px;	
+	background-color: #2E9AFE;
+	border: 4px solid #2E9AFE;
+	position: absolute;
 }
 
 
 
-#accordion{        
-        position: absolute;
+#accordion{	
+	position: absolute;
 }
+
+#accordion #formSearch{	
+	float:right;
+	width: 130px;
+	
+}
+
+#accordion #buttonSearch{	
+	float:left;
+	display: block;
+}
+
 
 #accordion .ui-accordion-content{
-        width: 100px;
-        height: 425px;
-        
+	width: 100px;
+	height: 425px;
+	
 }
 
 
