--- a/prototipo-3/style/client.css
+++ b/prototipo-3/style/client.css
@@ -15,7 +15,7 @@ html{
 #div-login-button{
     float: right;
     position: fixed;
-    right: 10%;
+    right: 15%;
     font-size:120%;
     color: white;
     transition: color 1s;
@@ -49,10 +49,15 @@ html{
 	line-height: 50px;
 	border-radius:7px;	
 	background-color: #2E9AFE;
-	border: 4px solid #2E9AFE;
+	border: 2px solid #2E9AFE;
 	position: absolute;
 }
 
+
+
+#chatTabs{
+	position: absolute;
+}
 
 
 #accordion{	
@@ -72,8 +77,8 @@ html{
 
 
 #accordion .ui-accordion-content{
-	width: 100px;
-	height: 425px;
+	width: 103px;
+	height: 420px;
 	
 }
 
