--- a/client/templates/juegos-t.html
+++ b/client/templates/juegos-t.html
@@ -9,11 +9,17 @@
 				<div class="gallery-item">
 					<h3>{{name}}</h3>
 					<img src="{{logo_src}}" class="gallery-image" alt="{{logo_alt}}" />
-				
+					<input type="button" class="btn cancel" value="Editar el info del juego">
 					<div class="gallery-description">
 						<h5>{{title_desc}}</h5>
 						<p>{{description}}</p>
 					</div>
+					
+					
+
+					{{#if showEditGame}}
+						{{> editGame}}
+					{{/if}}
 				</div>
 				{{/each}}
 			</div>
@@ -25,7 +31,37 @@
 
 
 <template name="gamecontainer"> 
-<div id="gamecontainer"> 
-	<canvas id='dummydiv' width='320' height='480'></canvas>
-</div>
+	<div id="gamecontainer"> 
+		<canvas id='dummydiv' width='320' height='480'></canvas>
+	</div>
+</template>
+
+
+
+
+<template name="editGame">
+{{#with game}}
+        <div class="mask"> </div>
+                <div class="modal">
+                
+                        <div class="modal-header">
+                                <button type="button" class="close cancel">&times;</button>
+                                <h3>Editar el juego</h3>
+                        </div>   
+                             
+                        <div class="modal-body">
+                        		<label>Nombre <input type="text" id="name" class="title span5" value={{name}}></label>
+                                <label>Titulo de descripcion <input type="text" id="title_desc"  value={{title_desc}}></label>
+                                <label>Descripcion </label> <textarea id="description" class="description span5">{{description}}</textarea> 
+                                <label>Imagen url: <input type="text" id="logo_src" class="title span5" value="{{logo_src}}"><br></label>
+                                <label>Init Function <input type="text" id="wrapf" class="title span5" value="{{wrapf}}"><br></label>
+                        </div>
+                        
+                        <div class="modal-footer">
+                                <a href="#" class="btn cancel">Cancelar</a>
+                                <a href="#" class="btn btn-primary save">Salvar</a>
+                        </div>
+                </div>
+        </div>
+          {{/with}}
 </template>
