--- a/prototipo-3/style/alien-invasion.css
+++ b/prototipo-3/style/alien-invasion.css
@@ -1,6 +1,27 @@
-#aliencanvas {
-	background-color: blue;
+/*
+body {
+	line-height: 1;
 	margin: 1cm;
-	width: 480px;
+}*/
+ol, ul {
+	list-style: none;
 }
-	
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+/* Give canvas a background */
+canvas {
+  background-color:black;
+}
